Replace FeelEngine with FeelingMirror extending MirrorJuice. ML: use full array of pairs (NxM rows) for prediction. ND4J and DJ4J are 'wrapped' in WebML (step 1 toward iso;ating, since using unsafe ops, TODO add vanilla drop-in or use separate keras server).
Example prediction speed:

    INFO  org.phobrain.webml.WebML - predict(nnl_7, 3721x202)
    INFO  org.phobrain.webml.WebML - t=30
    INFO  org.phobrain.webml.WebML - predict(vgg16_4, 3721x190)
    INFO  org.phobrain.webml.WebML - t=16

Lots of seeming whitespace/unobvious diffs from a month ago.